--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "salzubi401", email = "salaheddin@sentient.xyz"},
 ]
-dependencies = ["pydantic>=2.11.4", "loguru>=0.7.3", "networkx>=3.4.2", "agno>=1.4.6", "duckduckgo-search>=8.0.1", "flask>=3.1.1", "Flask-CORS>=5.0.1"]
+dependencies = ["pydantic>=2.11.4", "loguru>=0.7.3", "networkx>=3.4.2", "agno>=1.4.6", "duckduckgo-search>=8.0.1", "flask>=3.1.1", "Flask-CORS>=5.0.1", "markdown-pdf>=1.7"]
 requires-python = ">=3.12"
 readme = "README.md"
 license = {text = "MIT"}
