--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,17 @@
 {
   "projects": [
     {
-      "id": "3d035abd-7cd8-4887-9ccd-3bd8bef210f7",
+      "id": "3bb29aee-30b5-43cb-8f88-1f999abfd280",
       "title": "Write Me A Detailed Report About The Recent...",
       "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-05-27T16:17:00.307670",
-      "updated_at": "2025-05-27T16:17:16.417899",
-      "status": "running",
+      "created_at": "2025-05-27T16:29:33.768073",
+      "updated_at": "2025-05-27T16:29:57.867327",
+      "status": "completed",
       "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
       "max_steps": 250,
       "node_count": 1,
       "completion_percentage": 0.0
     }
   ],
-  "current_project_id": "3d035abd-7cd8-4887-9ccd-3bd8bef210f7"
+  "current_project_id": "3bb29aee-30b5-43cb-8f88-1f999abfd280"
 }
