--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,17 @@
 {
   "projects": [
     {
-      "id": "3bb29aee-30b5-43cb-8f88-1f999abfd280",
+      "id": "d5b1f741-9728-4592-abcb-2dfa2d867cb2",
       "title": "Write Me A Detailed Report About The Recent...",
       "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-05-27T16:29:33.768073",
-      "updated_at": "2025-05-27T16:29:57.867327",
-      "status": "completed",
+      "created_at": "2025-05-27T16:49:53.675162",
+      "updated_at": "2025-05-27T16:50:25.374991",
+      "status": "running",
       "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
       "max_steps": 250,
-      "node_count": 1,
+      "node_count": 5,
       "completion_percentage": 0.0
     }
   ],
-  "current_project_id": "3bb29aee-30b5-43cb-8f88-1f999abfd280"
+  "current_project_id": "d5b1f741-9728-4592-abcb-2dfa2d867cb2"
 }
