--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,17 @@
 {
   "projects": [
     {
-      "id": "d5b1f741-9728-4592-abcb-2dfa2d867cb2",
+      "id": "3b3caa55-8a59-4678-82ee-1fe2ffb8dba1",
       "title": "Write Me A Detailed Report About The Recent...",
       "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-05-27T16:49:53.675162",
-      "updated_at": "2025-05-27T16:50:25.374991",
-      "status": "running",
+      "created_at": "2025-05-27T16:58:06.433558",
+      "updated_at": "2025-05-27T16:58:36.527345",
+      "status": "completed",
       "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
       "max_steps": 250,
-      "node_count": 5,
+      "node_count": 1,
       "completion_percentage": 0.0
     }
   ],
-  "current_project_id": "d5b1f741-9728-4592-abcb-2dfa2d867cb2"
+  "current_project_id": "3b3caa55-8a59-4678-82ee-1fe2ffb8dba1"
 }
