--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,17 @@
 {
   "projects": [
     {
-      "id": "3b3caa55-8a59-4678-82ee-1fe2ffb8dba1",
+      "id": "40d025fb-742c-4c50-ad28-7dff6acd1f54",
       "title": "Write Me A Detailed Report About The Recent...",
       "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-05-27T16:58:06.433558",
-      "updated_at": "2025-05-27T16:58:36.527345",
-      "status": "completed",
+      "created_at": "2025-05-27T17:09:51.282078",
+      "updated_at": "2025-05-27T17:10:25.007309",
+      "status": "running",
       "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
       "max_steps": 250,
-      "node_count": 1,
+      "node_count": 5,
       "completion_percentage": 0.0
     }
   ],
-  "current_project_id": "3b3caa55-8a59-4678-82ee-1fe2ffb8dba1"
+  "current_project_id": "40d025fb-742c-4c50-ad28-7dff6acd1f54"
 }
