--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ __pycache__/
 # C extensions
 *.so
 
-.agent_projects/
-.agent_cache/
+.agent_projects/*
+.agent_cache/*
 
 # Distribution / packaging
 .Python
