--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,17 @@
 {
   "projects": [
     {
-      "id": "5f729b6b-f8de-4a3c-921a-891dda607b95",
+      "id": "a46efc72-202e-44b4-afc5-a4f1594964e6",
       "title": "Give Me A Full Overview Of Sentient Foundation...",
       "description": "give me a full overview of Sentient Foundation / Sentient Labs, the $1.2 billion start-up. i need info on founders, employees, sentiment on reddit, x, and other forums, what people are saying, and pro...",
-      "created_at": "2025-05-28T18:25:34.191260",
-      "updated_at": "2025-05-28T18:27:23.164247",
-      "status": "completed",
+      "created_at": "2025-05-28T18:37:34.883812",
+      "updated_at": "2025-05-28T18:39:05.846006",
+      "status": "running",
       "goal": "give me a full overview of Sentient Foundation / Sentient Labs, the $1.2 billion start-up. i need info on founders, employees, sentiment on reddit, x, and other forums, what people are saying, and projected evaluation after TGE",
       "max_steps": 250,
-      "node_count": 7,
+      "node_count": 36,
       "completion_percentage": 0.0
     }
   ],
-  "current_project_id": "5f729b6b-f8de-4a3c-921a-891dda607b95"
+  "current_project_id": "a46efc72-202e-44b4-afc5-a4f1594964e6"
 }
