--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,4 @@
 {
-  "projects": [
-    {
-      "id": "6da36847-d8bd-48f6-9f96-0f5932ca5f31",
-      "title": "Write Me A Detailed Report About The Recent...",
-      "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-05-30T19:08:06.378022",
-      "updated_at": "2025-05-30T19:11:30.028329",
-      "status": "completed",
-      "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "max_steps": 250,
-      "node_count": 6,
-      "completion_percentage": 0.0
-    }
-  ],
-  "current_project_id": "6da36847-d8bd-48f6-9f96-0f5932ca5f31"
+  "projects": [],
+  "current_project_id": null
 }
