--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,4 +1,17 @@
 {
-  "projects": [],
-  "current_project_id": null
+  "projects": [
+    {
+      "id": "fb497b68-a3ff-4823-8e17-aecaaf738f34",
+      "title": "Write Me A Detailed Report About The Recent...",
+      "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
+      "created_at": "2025-05-30T20:11:44.631213",
+      "updated_at": "2025-05-30T20:14:17.759804",
+      "status": "completed",
+      "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
+      "max_steps": 250,
+      "node_count": 6,
+      "completion_percentage": 0.0
+    }
+  ],
+  "current_project_id": "fb497b68-a3ff-4823-8e17-aecaaf738f34"
 }
