--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,4 @@
 {
-  "projects": [
-    {
-      "id": "325eee3f-3dac-46eb-8769-9522f923984e",
-      "title": "Write Me A Detailed Report About The Recent...",
-      "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-05-31T14:41:57.425620",
-      "updated_at": "2025-05-31T14:42:39.735626",
-      "status": "running",
-      "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "max_steps": 250,
-      "node_count": 13,
-      "completion_percentage": 0.0
-    }
-  ],
-  "current_project_id": "325eee3f-3dac-46eb-8769-9522f923984e"
+  "projects": [],
+  "current_project_id": null
 }
