--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,4 +1,17 @@
 {
-  "projects": [],
-  "current_project_id": null
+  "projects": [
+    {
+      "id": "f77328c5-162f-4ac0-8a8e-b40bca7115e9",
+      "title": "Write Me A Detailed Report About The Recent...",
+      "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
+      "created_at": "2025-05-31T19:27:02.257189",
+      "updated_at": "2025-05-31T19:27:18.334379",
+      "status": "running",
+      "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
+      "max_steps": 250,
+      "node_count": 7,
+      "completion_percentage": 0.0
+    }
+  ],
+  "current_project_id": "f77328c5-162f-4ac0-8a8e-b40bca7115e9"
 }
