--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 .agent_projects/*
 .agent_cache/*
 
+.agent_cache/
+.agent_projects/
+
 **/__pycache__/
 **/.agent_cache/
 **/.agent_projects/
