--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
@@ -21,9 +21,23 @@ agents:
           task_type: "WRITE"
         - action_verb: "plan"
           task_type: "THINK"
+      named_keys: ["CoreResearchPlanner", "default_planner"]
+    enabled: true
+
+  - name: "EnhancedSearchPlanner"
+    type: "planner"
+    adapter_class: "PlannerAdapter"
+    description: "Specialized planner optimized for search-focused research tasks with date awareness and parallel execution"
+    model:
+      provider: "litellm"
+      model_id: "gemini/gemini-2.5-flash-preview-05-20"
+    prompt_source: "prompts.planner_prompts.ENHANCED_SEARCH_PLANNER_SYSTEM_MESSAGE"
+    response_model: "PlanOutput"
+    registration:
+      action_keys:
         - action_verb: "plan"
           task_type: "SEARCH"
-      named_keys: ["CoreResearchPlanner", "default_planner"]
+      named_keys: ["EnhancedSearchPlanner", "search_planner"]
     enabled: true
 
   - name: "DeepResearchPlanner"
@@ -41,8 +55,6 @@ agents:
           task_type: "WRITE"
         - action_verb: "plan"
           task_type: "THINK"
-        - action_verb: "plan"
-          task_type: "SEARCH"
       named_keys: ["DeepResearchPlanner"]
     enabled: true
 
@@ -160,7 +172,7 @@ agents:
     description: "Modifies existing plans based on user feedback"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "gemini/gemini-2.5-flash-preview-05-20"
     prompt_source: "prompts.plan_modifier_prompts.PLAN_MODIFIER_SYSTEM_PROMPT"
     response_model: "PlanOutput"
     registration:
