--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,4 @@
 {
-  "projects": [
-    {
-      "id": "e5718d9d-6cd5-43b5-90c8-32261a83fd21",
-      "title": "Write Me A Detailed Report About The Recent...",
-      "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-06-02T10:20:54.996782",
-      "updated_at": "2025-06-02T10:21:42.797755",
-      "status": "running",
-      "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "max_steps": 250,
-      "node_count": 10,
-      "completion_percentage": 0.0
-    }
-  ],
-  "current_project_id": "e5718d9d-6cd5-43b5-90c8-32261a83fd21"
+  "projects": [],
+  "current_project_id": null
 }
