--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,4 +1,17 @@
 {
-  "projects": [],
-  "current_project_id": null
+  "projects": [
+    {
+      "id": "422376dd-6784-4f77-ad99-1468c5819905",
+      "title": "Write Me A Detailed Report About The Recent...",
+      "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
+      "created_at": "2025-06-02T13:57:36.221428",
+      "updated_at": "2025-06-02T14:35:32.219753",
+      "status": "completed",
+      "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
+      "max_steps": 250,
+      "node_count": 33,
+      "completion_percentage": 0.0
+    }
+  ],
+  "current_project_id": "422376dd-6784-4f77-ad99-1468c5819905"
 }
