--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
@@ -12,7 +12,7 @@ agents:
     description: "Specialized planner for research-focused tasks"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.planner_prompts.PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
     registration:
@@ -28,7 +28,7 @@ agents:
     description: "Specialized planner optimized for search-focused research tasks with date awareness and parallel execution"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.planner_prompts.ENHANCED_SEARCH_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
     registration:
@@ -44,7 +44,7 @@ agents:
     description: "Specialized planner optimized for search-focused research tasks with date awareness and parallel execution"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.planner_prompts.ENHANCED_THINK_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
     registration:
@@ -60,7 +60,7 @@ agents:
     description: "Specialized planner optimized for search-focused research tasks with date awareness and parallel execution"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.planner_prompts.ENHANCED_WRITE_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
     registration:
@@ -76,7 +76,7 @@ agents:
     description: "Master planner specialized in high-level research project decomposition and strategy"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.planner_prompts.DEEP_RESEARCH_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
     registration:
@@ -104,19 +104,19 @@ agents:
       named_keys: ["SearchExecutor", "default_search_executor"]
     enabled: true
 
-  - name: "SearchSynthesizer"
+  - name: "BasicReasoningExecutor"
     type: "executor"
     adapter_class: "ExecutorAdapter"
-    description: "Synthesizes search results into coherent summaries"
+    description: "Performs Analysis and Synthesis of information"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
-    prompt_source: "prompts.executor_prompts.SEARCH_SYNTHESIZER_SYSTEM_MESSAGE"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
+    prompt_source: "prompts.executor_prompts.REASONING_EXECUTOR_SYSTEM_MESSAGE"
     registration:
       action_keys:
         - action_verb: "execute"
           task_type: "THINK"
-      named_keys: ["SearchSynthesizer"]
+      named_keys: ["BasicReasoningExecutor"]
     enabled: true
 
   - name: "BasicReportWriter"
@@ -125,7 +125,7 @@ agents:
     description: "Writes detailed reports based on provided context"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.executor_prompts.BASIC_REPORT_WRITER_SYSTEM_MESSAGE"
     registration:
       action_keys:
@@ -161,7 +161,7 @@ agents:
     description: "Synthesizes results from multiple child tasks"
     model:
       provider: "litellm"
-      model_id: "openrouter/anthropic/claude-3-7-sonnet"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.aggregator_prompts.DEFAULT_AGGREGATOR_SYSTEM_MESSAGE"
     registration:
       action_keys:
@@ -180,7 +180,7 @@ agents:
     description: "Determines if tasks are atomic or need further planning"
     model:
       provider: "litellm"
-      model_id: "gemini/gemini-2.5-flash-preview-05-20"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.atomizer_prompts.ATOMIZER_SYSTEM_MESSAGE"
     response_model: "AtomizerOutput"
     registration:
@@ -200,7 +200,7 @@ agents:
     description: "Modifies existing plans based on user feedback"
     model:
       provider: "litellm"
-      model_id: "gemini/gemini-2.5-flash-preview-05-20"
+      model_id: "openrouter/anthropic/claude-sonnet-4"
     prompt_source: "prompts.plan_modifier_prompts.PLAN_MODIFIER_SYSTEM_PROMPT"
     response_model: "PlanOutput"
     registration:
