--- a/.agent_projects/projects.json
+++ b/.agent_projects/projects.json
@@ -1,17 +1,17 @@
 {
   "projects": [
     {
-      "id": "422376dd-6784-4f77-ad99-1468c5819905",
+      "id": "e8e0fb81-5665-42c2-bf97-82386cb5cb25",
       "title": "Write Me A Detailed Report About The Recent...",
       "description": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
-      "created_at": "2025-06-02T13:57:36.221428",
-      "updated_at": "2025-06-02T14:35:32.219753",
-      "status": "completed",
+      "created_at": "2025-06-02T14:45:04.011558",
+      "updated_at": "2025-06-02T14:49:39.635971",
+      "status": "running",
       "goal": "Write me a detailed report about the recent U.S. trade tariffs and their effect on the global economy",
       "max_steps": 250,
-      "node_count": 33,
+      "node_count": 19,
       "completion_percentage": 0.0
     }
   ],
-  "current_project_id": "422376dd-6784-4f77-ad99-1468c5819905"
+  "current_project_id": "e8e0fb81-5665-42c2-bf97-82386cb5cb25"
 }
