--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ __pycache__/
 project_results/
 emergency_backups/
 emergency_backups/*
+CLAUDE.md
+data_quality_analysis.md
 
 
 # Runtime logs and output
