--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/profiles/deep_research_agent.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/profiles/deep_research_agent.yaml
@@ -20,9 +20,15 @@ profile:
     THINK: "BasicReasoningExecutor"         # Analysis and synthesis
     WRITE: "BasicReportWriter"         # Report generation
 
+  # Task-specific aggregators
+  aggregator_adapter_names:
+    SEARCH: "SearchAggregator"         # Specialized for combining search results
+    THINK: "ThinkAggregator"           # Focused on analytical synthesis  
+    WRITE: "WriteAggregator"           # Optimized for document composition
+
   # Other action agents
   atomizer_adapter_name: "default_atomizer"
-  aggregator_adapter_name: "default_aggregator"
+  aggregator_adapter_name: "default_aggregator"  # Fallback for backward compatibility
   plan_modifier_adapter_name: "PlanModifier"
 
   # Fallbacks
